<resources>
    <string name="app_name">LittleHelper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ad">Давление</string>
    <string name="sd">Глюкометрия</string>
    <string name="move">Активность</string>
    <string name="weight">Вес</string>
    <string name="adpressure">Артериальное давление</string>
    <string name="bloodsd">Глюкометрия</string>
    <string name="action">Активность</string>
    <string name="weightlabel">Вес</string>
    <string name="ad_morning">♥ АД</string>
    <string name="ad_systol_ev">120</string>
    <string name="ad_drob_systol">/</string>
    <string name="ad_diastol_e">80</string>
    <string name="ad_evening">♥ АД</string>
    <string name="ad_systol_m">120</string>
    <string name="ad_eve_drob">/</string>
    <string name="ad_diastol_morning">80</string>
    <string name="ad_morning_text">☀ Утро</string>
    <string name="ad_evening_text">🌙 Вечер</string>
    <string name="button_add_morning">Добавить</string>
    <string name="button_ad_evening">Добавить</string>
    <string name="textview">TextView</string>
    <string name="ad_text_pressure">Артериальное давление</string>
    <string name="morning_nums_ad">Утро</string>
    <string name="evening_nums_ad">Вечер</string>
    <string name="backAd">Назад</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="autorization">Войти</string>
    <!-- Strings related to button_autorization -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image_profile">image_profile</string>
    <string name="todo">TODO</string>
    <string name="yes">Да, это мой аккаунт</string>
    <string name="no">Нет, это не мой аккаунт</string>
    <string name="SdHungry">До еды:</string>
    <string name="backSd">Назад</string>
    <string name="SdEating">После еды:</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profilenav">Профиль</string>
    <string name="actionView">Индекс вашей активности</string>
    <string name="call">call</string>
</resources>