<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentAd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ad.AdFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <EditText
            android:id="@+id/num_systol_ad_evening"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/ad_systol_ev"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            android:textSize="18sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:longClickable="false"
            android:minHeight="48dp"
            android:text="@string/ad_drob_systol"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/num_diastol_ad_evening"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/ad_diastol_e"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            android:textSize="18sp"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <EditText
            android:id="@+id/num_systol_ad_morning"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/ad_systol_m"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="36dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:focusable="false"
            android:longClickable="false"
            android:minHeight="48dp"
            android:text="@string/ad_eve_drob"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/num_diastol_ad_morning"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/ad_diastol_morning"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="107dp"
        android:layout_height="34dp"
        android:focusable="false"
        android:longClickable="false"
        android:minHeight="48dp"
        android:text="@string/ad_evening_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/ad_add_morning_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickAddMorningAd"
        android:text="🖊  Записать"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:rippleColor="#000000"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/ad_add_evening_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickAddAdEvening"
        android:text="🖊  Записать"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Количество шагов: "
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_view_bd" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:longClickable="false"
        android:text="@string/ad_morning_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_view_bd"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:onClick="onClickAdDairy"
        android:text="🗒   Дневник Давления"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:text="Количество шагов: "
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_moveDiary" />

    <Button
        android:id="@+id/btn_start"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="🏆  Индекс Активности"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActionMove" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:onClick="onClickListener"
        android:text="Stop"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_steps" />

    <Button
        android:id="@+id/button_add_moveDiary"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickMoveDiary"
        android:text="🗒  Дневник Активности"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start" />

    <TextView
        android:id="@+id/textViewActionMove"
        android:layout_width="310dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:hint="Индекс вашей активности"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textad" />

    <Button
        android:id="@+id/button_to_help"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="290dp"
        android:onClick="onClickToHelp"
        android:text="Пройти диагностику"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_add_morning_button" />

    <TextView
        android:id="@+id/textViewHelp"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="368dp"
        android:layout_height="201dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#FFEBEE"
        android:focusableInTouchMode="false"
        android:freezesText="false"
        android:text="Значения вашего давления отклонены от нормы. Для получения рекомендаций нажмите на кнопку ниже"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_add_morning_button"
        app:layout_constraintVertical_bias="0.008" />

</androidx.constraintlayout.widget.ConstraintLayout>